--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Star Wars API</title>
-  <link rel="stylesheet" href="/assets/bootstrap-4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/fontawesome-5.8.1/css/all.min.css">
+  <link rel="stylesheet" href="./assets/bootstrap-4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/fontawesome-5.8.1/css/all.min.css">
   <link rel="stylesheet" href="/app/css/styles.css">
 </head>
 
@@ -20,12 +20,48 @@
         <label for="resource-select">Select a resource</label>
         <select id="resource-select" class="form-control">
           <option disabled selected value></option>
-          <option>Characters</option>
-          <option disabled>Films (Coming Soon)</option>
-          <option disabled>Starships (Coming Soon)</option>
-          <option disabled>Vehicles (Coming Soon)</option>
-          <option disabled>Species (Coming Soon)</option>
-          <option disabled>Planets (Coming Soon)</option>
+          <option
+            data-url="https://swapi.co/api/people/"
+            data-label="Person"
+            data-resource="person"
+          >
+            People
+          </option>
+          <option
+            data-url="https://swapi.co/api/films/"
+            data-label="Film"
+            data-resource="film"
+          >
+            Films
+          </option>
+          <option
+            data-url="https://swapi.co/api/starships/"
+            data-label="Starship"
+            data-resource="starship"
+          >
+            Starships
+          </option>
+          <option
+            data-url="https://swapi.co/api/vehicles/"
+            data-label="Vehicle"
+            data-resource="vehicle"
+          >
+            Vehicles
+          </option>
+          <option
+            data-url="https://swapi.co/api/species/"
+            data-label="Species"
+            data-resource="species"
+          >
+            Species
+          </option>
+          <option
+            data-url="https://swapi.co/api/planets/"
+            data-label="Planet"
+            data-resource="planet"
+          >
+            Planets
+          </option>
         </select>
       </div>
 
@@ -47,9 +83,9 @@
       <span class="fab fa-jedi-order"></span>
     </div>
 
-    <div id="character-card">
-      <!-- Character info here -->
-    </div>
+    <section id="content">
+
+    </section>
   </main>
 
   <!-- JaveScript -->
