--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Star Wars API</title>
   <link rel="stylesheet" href="./assets/bootstrap-4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/fontawesome-5.8.1/css/all.min.css">
-  <link rel="stylesheet" href="/app/css/styles.css">
+  <link rel="stylesheet" href="./app/css/styles.css">
 </head>
 
 <body>
@@ -89,7 +89,7 @@
   </main>
 
   <!-- JaveScript -->
-  <script type="text/javascript" src="/app/js/scripts.js"></script>
+  <script type="text/javascript" src="./app/js/scripts.js"></script>
 </body>
 
 </html>
