--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <main>
-      <h1>Star Wars API</h1>
+      <!-- <h1>Star Wars API</h1> -->
 
       <form id="select-form" class="col-md-12">
         <div class="form-group">
